hir/src/passes/snapshots/transmute_hir__passes__resolver__tests__assignment_to_function_parameter_incorrect_type.snap
---
source: hir/src/passes/resolver.rs
expression: resolved_hir
---
Err(
    Diagnostics {
        diagnostics: [
            Diagnostic {
                message: "RHS expected to be of type number, got boolean",
                span: 1:34; [33, 37],
                level: Error,
            },
        ],
        inputs: (),
    },
)
