hir/src/passes/snapshots/transmute_hir__passes__resolver__tests__assignment_wrong_type_from_function.snap
---
source: hir/src/passes/resolver.rs
expression: resolved_hir
---
Err(
    Diagnostics {
        diagnostics: [
            Diagnostic {
                message: "RHS expected to be of type number, got boolean",
                span: 1:58; [57, 60],
                level: Error,
            },
        ],
        inputs: (),
    },
)
