hir/src/passes/snapshots/transmute_hir__passes__resolver__tests__assignment_wrong_type_from_void_function.snap
---
source: hir/src/passes/resolver.rs
expression: resolved_hir
---
Err(
    Diagnostics {
        diagnostics: [
            Diagnostic {
                message: "RHS expected to be of type number, got void",
                span: 1:46; [45, 48],
                level: Error,
            },
        ],
        inputs: (),
    },
)
