hir/src/passes/snapshots/transmute_hir__passes__resolver__tests__call_variable.snap
---
source: hir/src/passes/resolver.rs
expression: resolved_hir
---
Err(
    Diagnostics {
        diagnostics: [
            Diagnostic {
                message: "No function 'n' found for parameters of types ()",
                span: 1:13; [12, 13],
                level: Error,
            },
        ],
        inputs: (),
    },
)
